# SGJ2024

./: LICENSE  README.md  pyproject.toml
assets/: Level1.json  Level1.tmx  SGJ24Tileset.tsx  TEST.json  TEST.tmx  vertical.json  vertical.tmx
sgj2024/: config.py  gamewindow.py  run.py  sprites.py
sgj2024/interfaces/: baseController.py  hybridController.py  voiceController.py  whistleController.py  xInputController.py
